# TerrainGen

./: CMakeLists.txt  README.md
dependencies/: CMakeLists.txt
dependencies/include/LibMath/: Angle.h  Arithmetic.h  Macros.h  Matrix.h  Matrix4Vector4Operation.h  Quaternion.h  VariableType.hpp
dependencies/include/LibMath/angle/: Degrees.h  Radians.h
dependencies/include/LibMath/matrix/: Matrix2.h  Matrix3.h  Matrix4.h
dependencies/include/LibMath/vector/: Vector2.h  Vector3.h  Vector4.h
dependencies/include/glad/: glad.h
dependencies/lib/: LibMath.lib  glfw3.lib
dependencies/src/: glad.c
src/: CMakeLists.txt  main.cpp
src/camera/: Camera.cpp  Camera.h
src/input/: InputCallbacks.cpp  InputCallbacks.h  InputHandler.cpp  InputHandler.h
src/rendering/mesh/: Grid.cpp  Grid.h  Mesh.cpp  Mesh.h  Vertex.h
src/resource/: Resource.h  ResourceManager.cpp  ResourceManager.h
src/resource/shader/: Shader.cpp  Shader.h  ShaderResource.cpp  ShaderResource.h
src/utility/: Buffer.cpp  Buffer.h  FileData.h  GraphicsFunctions.cpp  GraphicsFunctions.h  PerlinNoise.cpp  PerlinNoise.h  Timer.cpp  Timer.h
src/window/: WindowHelperFunction.cpp  WindowHelperFunction.h  window.cpp  window.h
workspace/: Test.vert
workspace/shaders/: Grid.frag  Grid.tesc  Grid.tese  Grid.vert  Terrain.frag  Terrain.tesc  Terrain.tese  Terrain.vert
